setInterval kinda works

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "check": "standard && node -r dotenv/config main.js && exit 1",
     "fix": "standard --fix && node -r dotenv/config main.js && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r dotenv/config main.js"
+    "start": "nodemon -r dotenv/config main.js"
   },
   "keywords": [
     "basic",
